--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Note WebSocket Client</title>
-    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@stomp/stompjs@7.0.0/bundles/stomp.umd.min.js"></script>
 </head>
@@ -11,12 +11,14 @@
 <body>
     <h1>Note WebSocket Client</h1>
     <div id="messages"></div>
+    <input id="search-input">
+    <button onclick="sendMessage()" id="search-input-button">Click me</button>
     <!-- <button id="sendButton">Send</button> -->
     <script>
         let stompClient = null;
 
         function connect() {
-            const socket = new SockJS('http://localhost:8080/ws');
+            const socket = new WebSocket('ws://localhost:8080/ws');
             stompClient = Stomp.over(socket);
 
             console.log("Test 1");
@@ -25,7 +27,7 @@
                 console.log('Connected: ' + frame);
 
                 // Subscribe to note updates
-                stompClient.subscribe('/topic/notes', function (message) {
+                stompClient.subscribe('/topic/messages', function (message) {
                     const noteMessage = JSON.parse(message.body);
                     displayMessage(noteMessage);
                     console.log("Test 2");
@@ -42,39 +44,22 @@
         }
 
         function displayMessage(message) {
-            const messagesDiv = document.getElementById('messages');
+            const messagesDiv = document.getElementById('search-input');
             messagesDiv.innerHTML += `<p>${message.type}: ${message.content} (${message.timestamp})</p>`;
         }
 
-        // Connect when page loads
-        // connect();
+        function sendMessage() {
 
-        function connect2() {
-            const stompClient = new StompJs.Client({
-                brokerURL: 'ws://localhost:8080/ws',
-                connectHeaders: {
-                    // Add any headers if needed
-                },
-                debug: function (str) {
-                    console.log(str);
-                },
-                onConnect: function (frame) {
-                    console.log('Connected: ' + frame);
+            const input = document.getElementById("search-input");
+            console.log(input.value);
 
-                    stompClient.subscribe('/topic/notes', function (message) {
-                        const noteMessage = JSON.parse(message.body);
-                        displayMessage(noteMessage);
-                    });
-                },
-                onStompError: function (frame) {
-                    console.error('Broker reported error: ' + frame.headers['message']);
-                    console.error('Additional details: ' + frame.body);
-                }
-            });
-
-            stompClient.activate();
+            stompClient.send("app/hello", {}, JSON.stringify({
+                'type': 'UPDATE',
+                'noteId': "213123",
+                'content': input.value
+            }));
         }
-        connect2();
+        connect();
     </script>
 </body>
 
